--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbdr9e6ErRyosJ3PPoqlpg",
+      "authorship_tag": "ABX9TyOjEUD8FyAnj3zy8QGdRBGb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1965,6 +1965,21 @@
     {
       "cell_type": "code",
       "source": [
+        "#Importing data\n",
+        "import torch\n",
+        "import torchvision\n",
+        "from torchvision.transforms import ToTensor, Normalize, Compose\n",
+        "from torchvision.datasets import MNIST\n",
+        "\n",
+        "mnist = MNIST(root='data', \n",
+        "              train=True, \n",
+        "              download=True,\n",
+        "              transform=Compose([ToTensor(), Normalize(mean=(0.5,), std=(0.5,))]))\n",
+        "\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "\n",
         "#We going to re\n",
         "#Create a dataloader to load the images in batches.\n",
         "from torch.utils.data import DataLoader\n",
